--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.google.android.gms:play-services:10.2.1'
-    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.greysonparrelli.permiso:permiso:0.3.0'
 
     compile 'com.android.support:multidex:1.0.0'
     testCompile 'junit:junit:4.12'
